--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^4.14.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
     "eslint-plugin-react": "^7.22.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
