--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/static/build
+/static
+robots.txt
+manifest.json
+logo512.png
+logo192.png
+favicon.ico
+asset-manifest.json
+index.html
