--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,6 +4,20 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
+    "react-toastify": "^7.0.3",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -14,28 +28,16 @@
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "classnames": "^2.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint-plugin-react": "^7.22.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
-    "react-redux": "^7.2.2",
-    "react-scripts": "4.0.2",
-    "react-toastify": "^7.0.3",
-    "styled-components": "^5.2.1",
-    "typescript": "^4.1.3",
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.4.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build && mv build/* ../",
+    "build": "react-scripts build && if [ -d '../static' ]; then rm -r ../static; fi && mv build/* ../",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext=js,jsx,ts,tsx src"
