--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
