Add Cypress, fix react-app dependencies

--- a/react-app/tsconfig.json
+++ b/react-app/tsconfig.json
@@ -19,9 +19,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "types": ["cypress", "webpack-env"]
   },
   "include": [
-    "src"
+    "src",
+    "**/*.ts"
   ]
 }
