--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
-    "axios": "^0.21.1",
+    "axios": "^1.6.8",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
@@ -22,17 +22,19 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^29.5.12",
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.7",
-    "@types/webpack-env": "^1.16.0",
+    "@types/webpack-env": "^1.18.4",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "cypress": "^13.7.2",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-react": "^7.22.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.0"
   },
