--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
+app.baseURL = 'http://bookmarks.local/'
+
+database.default.hostname = localhost
+database.default.database = bookmarks
+database.default.username = root
+database.default.password = root
+
+encryption.key = 123456789012345678901234567890123
+
 #--------------------------------------------------------------------
 # Example Environment Configuration file
 #
